--- a/app/src/main/res/layout/activity_manage_contact.xml
+++ b/app/src/main/res/layout/activity_manage_contact.xml
@@ -1,212 +1,218 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/CreateContactActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:attr/colorForeground"
-    tools:context=".Activities.CreateContactActivity">
-
-    <include
-        android:id="@+id/custom_action_bar"
-        layout="@layout/custom_action_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    tools:context=".Activities.ManageContactActivity">
 
     <RelativeLayout
+        android:id="@+id/CreateContactActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp">
+        android:minHeight="600dp">
 
-        <TextView
-            android:id="@+id/phoneNumberTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:text="@string/phone_number_txt"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
+        <include
+            android:id="@+id/custom_action_bar"
+            layout="@layout/custom_action_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-        <EditText
-            android:id="@+id/phoneNumberInput"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:hint="@string/phone_number_hint"
-            android:importantForAutofill="no"
-            android:inputType="phone"
-            android:textColor="@color/grey"
-            android:textSize="14sp" />
+            android:layout_marginTop="120dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="20dp">
+
+            <TextView
+                android:id="@+id/phoneNumberTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:text="@string/phone_number_txt"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/phoneNumberInput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:hint="@string/phone_number_hint"
+                android:importantForAutofill="no"
+                android:inputType="phone"
+                android:textColor="@color/grey"
+                android:textSize="14sp" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="165dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="20dp">
+
+            <TextView
+                android:id="@+id/firstNameTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:text="@string/first_name_txt"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/firstNameInput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:hint="@string/first_name_hint"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:textColor="@color/grey"
+                android:textSize="14sp" />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="210dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="20dp">
+
+            <TextView
+                android:id="@+id/lastNameTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:text="@string/last_name_txt"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/lastNameInput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:hint="@string/last_name_hint"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:textColor="@color/grey"
+                android:textSize="14sp"
+                tools:ignore="TouchTargetSizeCheck" />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="255dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="20dp">
+
+            <TextView
+                android:id="@+id/nickNameTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/nick_name_txt"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <EditText
+                android:id="@+id/nickNameInput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:hint="@string/nick_name_hint"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:textColor="@color/grey"
+                android:textSize="14sp" />
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="305dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="20dp">
+
+            <TextView
+                android:id="@+id/pictureTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:text="@string/picture_txt"
+                android:textColor="@color/black"
+                android:textSize="14sp" />
+
+            <TextView
+                android:id="@+id/pictureTxtInput"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:text="@string/default_picture_txt" />
+
+        </RelativeLayout>
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="350dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="20dp">
+
+            <Button
+                android:id="@+id/btnSelectPic"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/btn_style"
+                android:text="@string/btn_select_picture_title"
+                android:textAllCaps="false"
+                android:textColor="@color/white" />
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="20dp">
+
+            <Button
+                android:id="@+id/btnSaveContact"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/btn_style"
+                android:text="@string/btn_save_contact_title"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btnDeleteContact"
+                android:layout_width="170dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/btn_style"
+                android:text="@string/btn_delete_contact_title"
+                android:textColor="@color/white" />
+
+        </RelativeLayout>
 
     </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="165dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp">
-
-        <TextView
-            android:id="@+id/firstNameTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:text="@string/first_name_txt"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
-
-        <EditText
-            android:id="@+id/firstNameInput"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:hint="@string/first_name_hint"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:textColor="@color/grey"
-            android:textSize="14sp" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="210dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp">
-
-        <TextView
-            android:id="@+id/lastNameTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:text="@string/last_name_txt"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
-
-        <EditText
-            android:id="@+id/lastNameInput"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:hint="@string/last_name_hint"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:textColor="@color/grey"
-            android:textSize="14sp"
-            tools:ignore="TouchTargetSizeCheck" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="255dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp">
-
-        <TextView
-            android:id="@+id/nickNameTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="@string/nick_name_txt"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
-
-        <EditText
-            android:id="@+id/nickNameInput"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:hint="@string/nick_name_hint"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            android:textColor="@color/grey"
-            android:textSize="14sp" />
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="305dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp">
-
-        <TextView
-            android:id="@+id/pictureTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:text="@string/picture_txt"
-            android:textColor="@color/black"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/pictureTxtInput"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:text="@string/default_picture_txt" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="350dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp">
-
-        <Button
-            android:id="@+id/btnSelectPic"
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="32dp"
-            android:background="@drawable/btn_style"
-            android:text="@string/btn_select_picture_title"
-            android:textAllCaps="false"
-            android:textColor="@color/white" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="10dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="20dp">
-
-        <Button
-            android:id="@+id/btnSaveContact"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:background="@drawable/btn_style"
-            android:text="@string/btn_save_contact_title"
-            android:textColor="@color/white" />
-
-        <Button
-            android:id="@+id/btnDeleteContact"
-            android:layout_width="170dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/btn_style"
-            android:text="@string/btn_delete_contact_title"
-            android:textColor="@color/white" />
-
-    </RelativeLayout>
-
-</RelativeLayout>
+</ScrollView>
