--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,94 +1,101 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/SettingsActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
     android:background="?android:attr/colorForeground"
     tools:context=".Activities.SettingsActivity">
 
-    <include
-        android:id="@+id/custom_action_bar"
-        layout="@layout/custom_action_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/phoneNumberTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
-        android:paddingStart="40dp"
-        android:paddingEnd="40dp"
-        android:text="@string/languages_txt"
-        android:textColor="@color/black"
-        android:textSize="24sp" />
-
     <RelativeLayout
+        android:id="@+id/SettingsActivity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
-        android:paddingStart="40dp"
-        android:paddingEnd="60dp">
+        android:fitsSystemWindows="true"
+        android:minHeight="600dp">
 
-        <Button
-            android:id="@+id/btnLanguageDefault"
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:background="@drawable/btn_style"
-            android:text="@string/btn_language_default"
-            android:textColor="@color/white" />
+        <include
+            android:id="@+id/custom_action_bar"
+            layout="@layout/custom_action_bar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-        <Button
-            android:id="@+id/btnLanguageEnglish"
-            android:layout_width="130dp"
+        <TextView
+            android:id="@+id/phoneNumberTxt"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/btn_style"
-            android:text="@string/btn_language_english"
-            android:textColor="@color/white" />
+            android:layout_marginTop="120dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="40dp"
+            android:text="@string/languages_txt"
+            android:textColor="@color/black"
+            android:textSize="24sp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="180dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="60dp">
+
+            <Button
+                android:id="@+id/btnLanguageDefault"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/btn_style"
+                android:text="@string/btn_language_default"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btnLanguageEnglish"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/btn_style"
+                android:text="@string/btn_language_english"
+                android:textColor="@color/white" />
+
+        </RelativeLayout>
+
+        <TextView
+            android:id="@+id/colorsTxt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="320dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="40dp"
+            android:text="@string/header_colors_txt"
+            android:textColor="@color/black"
+            android:textSize="24sp" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="380dp"
+            android:paddingStart="40dp"
+            android:paddingEnd="60dp">
+
+            <Button
+                android:id="@+id/btnColorBlackWhite"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/btn_style"
+                android:text="@string/btn_color_black_white"
+                android:textColor="@color/white" />
+
+            <Button
+                android:id="@+id/btnColorBlue"
+                android:layout_width="130dp"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/btn_style"
+                android:text="@string/btn_color_blue"
+                android:textColor="@color/white" />
+
+        </RelativeLayout>
+
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/colorsTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="320dp"
-        android:paddingStart="40dp"
-        android:paddingEnd="40dp"
-        android:text="@string/header_colors_txt"
-        android:textColor="@color/black"
-        android:textSize="24sp" />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="380dp"
-        android:paddingStart="40dp"
-        android:paddingEnd="60dp">
-
-        <Button
-            android:id="@+id/btnColorBlackWhite"
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:background="@drawable/btn_style"
-            android:text="@string/btn_color_black_white"
-            android:textColor="@color/white" />
-
-        <Button
-            android:id="@+id/btnColorBlue"
-            android:layout_width="130dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/btn_style"
-            android:text="@string/btn_color_blue"
-            android:textColor="@color/white" />
-
-    </RelativeLayout>
-
-
-</RelativeLayout>
+</ScrollView>
